--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                     <form id = "patientLogin"  action = "./PatientPortal/php/login.php" accept-charset="utf-8" method="POST">
                         <input type="text" name="username" placeholder="Username" required autofocus/>
                         <br/>
-                        <input type="password" name="pass" placeholder="Password" required/>
+                        <input type="password" name="password" placeholder="Password" required/>
                         <br/>
                         <input type="submit" name = "login" value ="Sign in" >
                     </form>
