--- a/src/PatientPortal/exercises/Common/html/index.html
+++ b/src/PatientPortal/exercises/Common/html/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game Test</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <title><?php echo $PageTitle;?></title>
+    <link rel="stylesheet" type="text/css" href="../../Common/css/style.css">
 </head>
 <body onload="Main.init()">
     <div id="side">
@@ -17,13 +17,8 @@
     <script type="text/javascript" src="../../thrid party libs/underscore-min.js"></script>
     <script type="text/javascript" src="../../thrid party libs/leap-0.6.3.js"></script>
 
-    <script type="text/javascript" src="../js/shaders.js"></script>
-    <script type="text/javascript" src="../js/programUtils.js"></script>
-    <script type="text/javascript" src="../js/shapes.js"></script>
-    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="../../Common/js/shaders.js"></script>
+    <script type="text/javascript" src="../../Common/js/shapes.js"></script>
+    <script type="text/javascript" src="../../Common/js/main.js"></script>
 
-    <script type="text/javascript" src="../../fingerSeparating/js/game.js"></script>
-    <script type="text/javascript" src="../../fingerSeparating/js/exercise.js"></script>
 
-</body>
-</html>
