Fixed missing script import statement

--- a/src/PatientPortal/exercises/Common/html/index.html
+++ b/src/PatientPortal/exercises/Common/html/index.html
@@ -19,6 +19,7 @@
 
     <script type="text/javascript" src="../../Common/js/shaders.js"></script>
     <script type="text/javascript" src="../../Common/js/shapes.js"></script>
+    <script type="text/javascript" src="../../Common/js/programUtils.js.js"></script>
     <script type="text/javascript" src="../../Common/js/main.js"></script>
 
 
