--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                     <div class = "LogIn_message">
                         <p>Login into Patient Portal</p>
                     </div>
-                    <form id = "patientLogin"  action = "./PatientPortal/php/login.php" accept-charset="utf-8" method="POST">
+                    <form id = "patientLogin" action = "PatientPortal/assests/php/login.php" accept-charset="utf-8" method="POST">
                         <input type="text" name="username" placeholder="Username" required autofocus/>
                         <br/>
                         <input type="password" name="password" placeholder="Password" required/>
@@ -31,7 +31,7 @@
                     <div class = "LogIn_message">
                         <p>Login into Care Provider Portal</p>
                     </div>
-                    <form id = "careProviderLogin"  action = "./CareProviderPortal/php/login.php" accept-charset="utf-8" method="POST">
+                    <form id = "careProviderLogin" action = "CareProviderPortal/assests/php/login.php" accept-charset="utf-8" method="POST">
                         <input type="text" name="username" placeholder="Username" required autofocus/>
                         <br/>
                         <input type="password" name="pass" placeholder="Password" required/>
