--- a/src/PatientPortal/assests/html/header.html
+++ b/src/PatientPortal/assests/html/header.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title><?php echo $PageTitle;?></title>
+    <link href="./assests/libs/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assests/css/homePage.css">
 </head>
 <body ng-controller="exercises">
-<div class = "container">
-    <div class="header">
-        <img id="logo" src="./assests/imgs/logo.png">
-        <div id = "userInfo">
-            <p id = "WelcomeMessage">Welcome <?php echo $patientName?></p>
-            <p id = "Consultant">Consultant: <?php echo $consultantName?></p>
+    <div class="container-fluid">
+        <div id="header">
+            <div class="col-md-9">
+                <div id = "userInfo" >
+                    <p id = "WelcomeMessage">Welcome <?php echo $patientName?></p>
+                    <p id = "Consultant">Consultant: <?php echo $consultantName?></p>
+                </div>
+            </div>
+            <div id="Logout" class="col-md-2 col-md-offset-1">
+                   <a href="./assests/php/logout.php"> log Out </a>
+            </div>
         </div>
-        <div id="Logout">
-            <a href="./assests/php/logout.php"> log Out </a>
-        </div>
-    </div>
