--- a/src/CareProviderPortal/assests/html/footer.html
+++ b/src/CareProviderPortal/assests/html/footer.html
@@ -1,6 +1,23 @@
-        <div class="footer">
-            Footer Here
         </div>
-    </div>
-</body>
+        <div class="padding">
+        </div>
+        <footer id="footer">
+            Footer Here
+        </footer>
+        <script src="./assests/libs/jquery.min.js"></script>
+        <script src="./assests/libs/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="./assests/libs/angular.min.js"></script>
+        <script type="text/javascript" src="./assests/libs/angular-aria.js"></script>
+        <script type="text/javascript" src="./assests/libs/angular-cookies.min.js"></script>
+        <script type="text/javascript" src="./assests/libs/angular-route.min.js"></script>
+
+        <script type="text/javascript" src="./assests/libs/angular-animate.min.js"></script>
+        <script type="text/javascript" src="./assests/libs/angular-sanitize.min.js"></script>
+        <script type="text/javascript" src="./assests/libs/angular-touch.min.js"></script>
+
+        <script type="text/javascript" src="./assests/libs/ui-bootstrap-tpls-2.3.0.min.js"></script>
+
+        <script type="text/javascript" src="./app/app.js"></script>
+    </body>
 </html>
