--- a/src/CareProviderPortal/assests/html/header.html
+++ b/src/CareProviderPortal/assests/html/header.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="portal" ng-cloak>
 <head>
     <meta charset="UTF-8">
     <title><?php echo $PageTitle;?></title>
-    <link rel="stylesheet" type="text/css" href="../css/homePage.css">
+    <link href="./assests/libs/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assests/css/homePage.css">
 </head>
-<body>
-<div class = "container">
-    <div class="header">
-        Header Here
-    </div>
+<body ng-controller="patientCtrl as patient">
+    <div class="container-fluid">
+
+        <div id="header">
+            <div class="col-md-9">
+                <div id = "userInfo" >
+                    <p id = "WelcomeMessage">Welcome <?php echo $careProviderName?></p>
+                    <p id = "Consultant">Level: <?php echo $level?></p>
+                </div>
+            </div>
+            <div id="Logout" class="col-md-2 col-md-offset-1">
+                <a href="./assests/php/logout.php"> log Out </a>
+            </div>
+        </div>
+
+        <div class="clearfix"></div>
