fixed path for exercise files.

--- a/src/PatientPortal/exercises/Tip to Tip/html/resourcesToLoad.html
+++ b/src/PatientPortal/exercises/Tip to Tip/html/resourcesToLoad.html
@@ -1,2 +1,2 @@
-    <script type="text/javascript" src="../../Finger Separating/js/game.js"></script>
-    <script type="text/javascript" src="../../Finger Separating/js/exercise.js"></script>
+    <script type="text/javascript" src="../../Tip to Tip/js/game.js"></script>
+    <script type="text/javascript" src="../../Tip to Tip/js/exercise.js"></script>
