Move jquery link to start of page.

--- a/src/CareProviderPortal/assests/html/footer.html
+++ b/src/CareProviderPortal/assests/html/footer.html
@@ -4,7 +4,7 @@
         <footer id="footer">
             Footer Here
         </footer>
-        <script src="./assests/libs/jquery.min.js"></script>
+
         <script src="./assests/libs/bootstrap.min.js"></script>
 
         <script type="text/javascript" src="./assests/libs/angular.min.js"></script>
@@ -18,6 +18,12 @@
 
         <script type="text/javascript" src="./assests/libs/ui-bootstrap-tpls-2.3.0.min.js"></script>
 
+        <script type="text/javascript" src="./assests/libs/highcharts.js"></script>
+        <script type="text/javascript" src="./assests/libs/grouped-categories.js"></script>
+        <script type="text/javascript" src="./assests/libs/exporting.js"></script>
+        <script type="text/javascript" src="./assests/libs/canvg.min.js"></script>
+        <script type="text/javascript" src="./assests/libs/jspdf.min.js"></script>
+        <script type="text/javascript" src="./assests/libs/jspdf.plugin.autotable.min.js"></script>
         <script type="text/javascript" src="./app/app.js"></script>
-    </body>
+        </body>
 </html>
