--- a/src/CareProviderPortal/assests/html/header.html
+++ b/src/CareProviderPortal/assests/html/header.html
@@ -5,6 +5,7 @@
     <title><?php echo $PageTitle;?></title>
     <link href="./assests/libs/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assests/css/homePage.css">
+    <script src="./assests/libs/jquery.js"></script>
 </head>
 <body ng-controller="patientCtrl as patient">
     <div class="container-fluid">
